--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon"  href="%PUBLIC_URL%/movie.ico" /> -->
-    <link rel="icon"  href="./movies.ico">
+    <link rel="icon"  href="%PUBLIC_URL%/hotel.png" />  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +26,7 @@
       
     -->
   
-    <title>My favorite movies</title>    
+    <title>Booking Client</title>    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
